Corrected spacing for content images. https://app.asana.com/0/84113659891181/91309023675436

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,22 @@ body {display: flex; flex-direction: column; min-height: 100vh; width: 100%;}
 }
 
 .contentRow {
-	margin: 15px 5px 0;
+
 }
+
+/* Clears Bootstrap defaults */
+.contentImageRow > .col-md-3,
+.contentImageRow > .col-sm-4,
+.contentImageRow > .col-xs-6 {
+	padding-right: 0;
+	padding-left: 0;
+}
+
+/* Adds small space between content images */
+.contentImage {
+	padding: 5px;
+}
+
 
 /***************************************************
  * SECTION: Footer
